# dacli

./: .env.example  .gitignore  .vulture_whitelist.py  CONTRIBUTING.md  Dockerfile  README.md  RELEASING.md  config_template.yaml  dbt_project.yml  pyproject.toml  requirements-aws.txt  requirements.txt  run.py  setup.py
.github/: release.yml
.github/actions/dacli-gate/: action.yml
.github/workflows/: ci.yml  deploy.yml  deploy_dbt.yml  release.yml
assets/: architecture.mmd  demo.cast
config/: __init__.py  policy.yaml  profiles.yml  settings.py  tool_registry.py
connectors/: __init__.py  base.py  cli_base.py  dispatcher.py  dod.py  http_base.py  registry.py
connectors/airflow/: SKILL.md  connector.py  manifest.yaml
connectors/bigquery/: SKILL.md  connector.py  manifest.yaml
connectors/dagster/: SKILL.md  connector.py  manifest.yaml
connectors/databricks/: SKILL.md  connector.py  manifest.yaml
connectors/dbt/: SKILL.md  connector.py  manifest.yaml
connectors/dynamodb/: SKILL.md  connector.py  manifest.yaml
connectors/gcs/: SKILL.md  connector.py  manifest.yaml
connectors/github/: SKILL.md  __init__.py  connector.py  manifest.yaml
connectors/mongodb/: SKILL.md  connector.py  manifest.yaml
connectors/mysql/: SKILL.md  connector.py  manifest.yaml
connectors/pinecone/: SKILL.md  __init__.py  connector.py  manifest.yaml
connectors/postgres/: SKILL.md  connector.py  manifest.yaml
connectors/s3/: SKILL.md  connector.py  manifest.yaml
connectors/shell/: __init__.py  connector.py
connectors/snowflake/: SKILL.md  __init__.py  connector.py  manifest.yaml
connectors/system/: __init__.py  connector.py
connectors/templates/: README.md  cli_connector_template.py  manifest_template.yaml  rest_connector_template.py
context/: __init__.py  assembler.py  budget.py  compaction.py  disclosure.py  pipeline.py  spill.py  tokenizer.py
context/sources/: __init__.py  terminal.py
core/: __init__.py  agent.py  atomicio.py  blackboard.py  connect_flow.py  connector_config.py  connector_generator.py  connector_workflow.py  crypto.py  headless.py  kernel.py  logging_setup.py  loop.py  memory.py  planner.py  pricing.py  router.py  setup_wizard.py  store.py  subagent.py  test_mode.py  verify.py
deploy/: README.md
deploy/app/: observability.py  server.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONNECTORS.md  CONNECTOR_CONFIG_PATTERN.md  EVALUATION.md  EXTENSIONS.md  GOVERNANCE.md  README.md  TESTING.md  phase2-deferred-postconditions.md
docs/superpowers/plans/: 2026-06-05-headless-test-cli.md  2026-06-05-semantic-lineage-knowledge-layer.md
docs/superpowers/specs/: 2026-06-05-headless-test-cli-design.md
eval/: __init__.py  __main__.py  calibration.py  dashboard.py  harness.py  passk.py  regression.py  selfimprove.py  types.py
eval/golden/: __init__.py  connectors.py  spine.py  terminal.py
eval/sim/: __init__.py  cli.py  platforms.py  shell.py
examples/warehouse-snowflake/: .env.example  README.md  scenario.json
examples/warehouse-snowflake/data/: customers.csv  orders.csv
governance/: __init__.py  audit.py  classifier.py  command_classifier.py  governor.py  permissions.py  policy_engine.py  rollback.py  shadow.py
memory/: __init__.py  catalog.py  episodic.py  priors.py  procedural.py  retrieval.py  semantic.py  store.py  verify.py
models/: sources.yml
models/gold/: dim_category.sql  dim_customer.sql  dim_product.sql  fact_sales.sql
models/silver/: stg_cust_az12.sql  stg_cust_info.sql  stg_loc_a101.sql  stg_prd_info.sql  stg_px_cat_g1v2.sql  stg_sales_details.sql
prompts/: __init__.py  system_message.md  system_prompt.py  user_prompt.py
prompts/fragments/: core.md  github.md
reasoning/: __init__.py  llm.py  model_router.py  scripted.py
sandbox/: __init__.py  _worker.py  bridge.py  connector.py  docker_runtime.py  factory.py  policy.py  runtime.py  sdk.py  terminal.py  workspace.py
sandbox/docker/: worker.py
sandbox/shells/: __init__.py  base.py  powershell.py  transports.py  windows_cmd.py  wsl.py  zsh.py
scenarios/: README.md  ci_governance_gate.json  smoke_headless.json
scripts/: clean.py  cli.py  config.py  smoke_connector_lifecycle.py
skills/: __init__.py  connector.py  registry.py  spec.py
skills/diagram_mermaid/: SKILL.md  __init__.py  skill.py
src/dacli/: __init__.py
src/dacli/config/: __init__.py  settings.py
src/dacli/connectors/: base.py  dispatcher.py  dod.py  registry.py
src/dacli/context/: assembler.py  pipeline.py  spill.py
src/dacli/core/: __init__.py  agent.py  atomicio.py  blackboard.py  chat_session.py  connect_extension.py  connect_flow.py  connector_config.py  connector_generator.py  connector_workflow.py  cost_advisor.py  (+22 more)
templates/: .env.exmple  config_template.yaml
terraform/: bootstrap.sh  iam.tf  main.tf  monitoring.tf  networking.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
tests/: golden_echo.py  test_atomicio.py  test_cli_init.py  test_connector_config_migration.py  test_connector_dod.py  test_context_phase3.py  test_cost_advisor.py  test_cost_governance.py  test_crypto.py  test_cwd_pollution.py  test_data_diff_skill.py  test_doctor.py  test_eval_report.py  test_extensions.py  test_generate.py  test_golden_transcript.py  test_governance_phase5.py  test_governance_vocab.py  test_headless.py  test_initialize_and_sessions_p04.py  test_kernel_logging.py  test_lineage_blast_radius.py  test_llm_google.py  test_llm_retry.py  test_logging_setup.py  test_m01_characterization.py  test_m04_governed_dispatch.py  test_m05_hot_reload.py  test_m07_secrets_connect.py  test_m08_seeds.py  test_m09_thin_host.py  test_m15_workspaces.py  test_memory_phase2.py  test_orchestration_phase6.py  test_orchestration_wiring_p08.py  test_p11_catalog_cli.py  test_p11_ci_scenarios.py  test_p11_connector_install.py  test_p11_dbt_context.py  test_p11_export_run.py  (+38 more)
tests/fixtures/: dbt_manifest.json
tools/: Base.py  __init__.py  bump_version.py  check_docs.py  github_tools.py  make_demo_cast.py  pinecone_tools.py  render_demo_gif.py  snowflake_tools.py
tui/: __init__.py  theme.py  ui.py
(+115 files in other folders)
