[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dacli"
version = "0.1.0"
description = "Your autonomous data engineering CLI agent"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Mouad Jaouhari", email = "github@mj-dev.net" }]
keywords = ["data engineering", "autonomous agent", "data engineering CLI"]
# NOTE: dependency selection/pinning is P11's job. Until then the runtime deps
# live in requirements.txt; keep this a placeholder so P11 fills and pins it.
dependencies = []
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/mouadja02/dacli"

[project.scripts]
dacli = "dacli.scripts.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Non-Python runtime assets that must ship in the wheel. The `dacli` package now
# exists (src layout), so these patterns resolve — unlike the old setup.py which
# pointed `package_data` at a `dacli` package that didn't exist under the flat layout.
dacli = [
    "prompts/*.md",
    "prompts/fragments/*.md",
    "connectors/**/manifest.yaml",
    "connectors/**/SKILL.md",
    "connectors/templates/*",
    "skills/**/SKILL.md",
    "config/*.yaml",
]

[tool.ruff]
target-version = "py310"
extend-exclude = ["build", ".venv", ".claude"]

[tool.ruff.lint]
select = ["E", "F", "B", "SIM", "RUF", "UP", "C4", "PERF", "RET"]
ignore = [
    # Module-level import not at top of file — several modules intentionally set up
    # sys.path / logging before importing.
    "E402",
    # Ambiguous unicode in docstrings/comments — the 𝒮/𝒪/𝒢/ℛ harness glyphs are
    # intentional mathematical notation, not typos.
    "RUF002",
    "RUF003",
    # Line length is a formatter's concern; no formatter is introduced in P09, and
    # reflowing ~960 lines would be pure churn that risks the intentional glyph
    # docstrings. Revisit when a formatter lands.
    "E501",
    # try/except inside a loop is an intentional per-iteration error-isolation
    # pattern here; "fixing" it by hoisting the try outside the loop would change
    # semantics (stop on first error instead of continuing). No safe autofix exists.
    "PERF203",
]
# The intentional display glyphs that would otherwise trip RUF001 in string
# literals (× multiplication sign, ❯ prompt chevron, ℹ info marker).
allowed-confusables = ["×", "❯", "ℹ"]

[tool.ruff.lint.per-file-ignores]
# Tests use unused fixture args (ARG) and class-level mutable attrs (RUF012) freely.
"tests/*" = ["ARG", "RUF012"]
